add endpoint to get current session data
